# c-data-structures

./: .gitignore  CMakeLists.txt  README.md  main.c  testing.txt
header/: heap.h  stack.h  tree.h
source/: heap.c  list.c  queue.c  stack.c  stack_examples.c  tree.c
src/: CMakeLists.txt
src/dataStructures/: CMakeLists.txt  heap.c  list.c  list.h  queue.c  queue.h  stack.c  stack.h  stack_examples.c  stack_examples.h  tree.c
src/main/: CMakeLists.txt  main.c
src/test/: CMakeLists.txt
src/test/list_tests/: CMakeLists.txt  list_test.c
src/test/queue_tests/: CMakeLists.txt  queue_test.c
src/test/stack_tests/: CMakeLists.txt  stack_test.c
src/unity/: CMakeLists.txt
